docs: Add documentation for login user
